# CppWinRTTemplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  main.cpp  pch.h
